# ChessLib

./: CMakeLists.txt  README.md
include/: chess.h  game_data.h  types.h
src/: chess.cpp  game_data.cpp
src/game_data/: game_data.cpp  game_data.h
tests/: test_chess.cpp
